fixed styles alignment

--- a/src/components/Option1/Option1.module.scss
+++ b/src/components/Option1/Option1.module.scss
@@ -105,3 +105,24 @@
     }
   }
 }
+
+@media only screen and (min-width: 1180px) {
+  .articlePleaContainer {
+    grid-column-end: span 7;
+    grid-row-end: span 1;
+    grid-column-start: 4;
+    .headerWrapper {
+      display: flex;
+      flex-direction: column;
+      .image {
+        width: 20%;
+      }
+      .titlePlea {
+        font-size: 1.5em;
+      }
+      .content {
+        font-size: 1.1em;
+      }
+    }
+  }
+}
